feat: Username and protected routes

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+
+html,
+body,
+:root {
+  height: 100%;
+  @apply bg-neutral-900/80;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -40,6 +48,7 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
@@ -72,6 +81,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
